--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "Otas",
+  "short_name": "OTAS",
   "name": "Otas Tech Solutions",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "otas.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "favicon.png",
+      "src": "otas.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "favicon.png",
+      "src": "otas.png",
       "type": "image/png",
       "sizes": "512x512"
     }
